# ai-train-week4

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  submission_report.md
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
app/api/: endpoints.py  middleware.py  schemas.py
app/core/: config.py  models.py  tokenizer.py
app/services/: agentic_service.py  experiment_service.py  multi_sdk_service.py  repository.py  single_prompt_service.py  tool_service.py
docs/: TASK6_PLAN.md  TASK7_PLAN.md
scripts/: run_llama_server.sh
static/: app.js  index.html  style.css
tests/: test_agentic_flow.py  test_api.py  test_middleware.py  test_multi_sdk_service.py  test_repository.py  test_services.py  test_tokenizer.py  test_tool_service.py
