[project]
name = "token-experiment"
version = "0.1.0"
description = "Tokenization and Context Limits Experiment"
authors = [
    {name = "Antigravity"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "openai (>=2.26.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "pydantic-settings (>=2.4.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.5,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
